--- a/styles/globals/_prynav.scss
+++ b/styles/globals/_prynav.scss
@@ -4,38 +4,96 @@ header {
     flex-direction: column;
     justify-content: center;
 
-    img {
-        width: 10rem;
-        height: 4rem;
-    }
+
 
     nav {
         display: flex;
         justify-content: space-around;
-        top: 24px;
-        position: absolute;
+        top: 0;
+        position: fixed;
+        z-index: 2;
+        background-color: map-get($neutrals, white);
         width: 100%;
+        height: 3rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        border: 0.5px solid map-get($neutrals, light-red);
 
-        .hamburger-menu-hidden {
-            display: hidden;
+        @media (min-width: 480px) {
+            justify-content: space-between;
+            width: 100%;
+
         }
 
-        // left: 100px;
+        img {
+            width: 10rem;
+            height: 4rem;
+            margin-left: 2rem;
+
+
+
+        }
+
         background-color: map-get($neutrals, white);
+
+        .container {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            width: 100%;
+
+            @media (max-width: 480px) {
+                display: none;
+                position: fixed;
+                top: 0;
+                flex-direction: column;
+                justify-content: space-evenly;
+                align-items: center;
+                z-index: 3;
+                width: 55%;
+                height: 100vh;
+                background-color: map-get($neutrals, white);
+                left: 0;
+                box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.3);
+                margin-bottom: 16px;
+
+            }
+        }
 
         ul {
             display: flex;
-            justify-content: space-evenly;
+            justify-content: space-between;
             align-items: center;
             list-style-type: none;
 
+            @media (min-width: 480px) {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                height: 75vh;
+                margin-top: 24px;
+
+            }
+
+
+
+
             li {
+
+
+
 
                 a {
                     text-decoration: none;
                     display: block;
-                    width: 10vw;
+                    width: 15vw;
                     color: map-get($pry-colors, dark-black);
+
+                    @media (min-width: 480px) {
+                        display: block;
+                        padding: 1rem;
+                        width: 100%;
+                    }
 
 
 
@@ -46,25 +104,40 @@ header {
 
 
             }
+
+
         }
 
 
 
+        // @media (min-width: 481px) and (max-width: 900px) {
+        //     display: none;
+        // }
+
 
     }
 
-    @media (max-width: 480px) {
+    .menu-icon,
+    .close-icon {
+        display: none;
+        width: 48px;
+        margin-right: 48px;
+
+
+        @media (min-width: 480px) {
+            display: inline-block;
+            // margin-left: 1rem;
+        }
+    }
+
+    #close-btn {
         display: none;
     }
+
+
 }
 
-.mobile-menu {
-    display: none;
 
-    @media (max-width: 480px) {
-        display: flex;
-    }
-}
 
 button {
     width: 10rem;
