--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -1,7 +1,7 @@
 .fold-area {
     margin-top: 104px;
     margin-bottom: 64px;
-    padding-top: 40px;
+    padding-top: 32px;
     padding-bottom: 40px;
     display: flex;
     justify-content: center;
@@ -14,8 +14,24 @@
     margin-bottom: 10vh;
 
     @media (max-width: 480px) {
-        width: 100%;
+        max-width: 100vw;
+        height: 80vh;
+        margin-top: 48px;
+        padding-right: 2.5%;
+        padding-left: 2.5%;
+        // margin-right: -300px;
+
     }
+
+    @media (min-width: 481px) and (max-width: 900px) {
+        max-width: 100vw;
+        height: 80vh;
+        margin-top: 24px;
+        padding-right: 3%;
+        padding-left: 3%;
+    }
+
+
 
     .fold-area-section {
         width: 60%;
@@ -26,6 +42,11 @@
 
         @media (max-width: 480px) {
             width: 100%;
+
+        }
+
+        @media (min-width: 481px) and (max-width: 900px) {
+            width: 80%;
         }
 
 
@@ -52,6 +73,10 @@
 
             @media (max-width: 480px) {
                 width: 80%;
+            }
+
+            @media (min-width: 481px) and (max-width: 900px) {
+                width: 100%;
             }
 
             h1 {
@@ -90,6 +115,14 @@
         align-items: center;
     }
 
+    @media (max-width: 481px) and (max-width: 900px) {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
 }
 
 .sales-pitch {
@@ -104,10 +137,35 @@
     border: 0.5px solid map-get($pry-colors, bright-yellow);
     margin-bottom: 120px;
 
+    @media (max-width: 480px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 50vh;
+
+    }
+
+    @media (min-width: 481px) and (max-width: 900px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 50vh;
+    }
+
     .yellow-line {
         height: 18vh;
         width: 0.1%;
         background-color: map-get($pry-colors, bright-yellow);
+
+        @media (max-width: 480px) {
+            height: 0.1%;
+            width: 18vw;
+        }
+
+        @media (min-width: 481px) and (max-width: 900px) {
+            height: 0.1%;
+            width: 18vw;
+        }
     }
 
     .pitch-section {
@@ -115,6 +173,10 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        @media (max-width: 480px) {
+            margin: 16px auto;
+        }
 
 
         h3 {
@@ -131,29 +193,37 @@
     justify-content: flex-start;
     align-items: flex-start;
 
+    @media (max-width: 480px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+
+        h2 {
+            text-align: center;
+            margin: 16px auto;
+        }
+    }
+
+    @media (min-width: 481px) and (max-width: 900px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
     .recentcasecontrol {
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+
+
     }
 
-    .casecontrol {
-        width: 15%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
 
-        div {
-            border-radius: 50%;
-            background-color: map-get($neutrals, light-yellow);
-            padding: 16px;
-            border: 0.5px solid map-get($pry-colors, bright-yellow);
-            display: none;
-        }
-    }
 
     .news-section {
         display: flex;
@@ -161,6 +231,27 @@
         justify-content: space-between;
         align-items: flex-start;
         margin-top: 48px;
+
+        @media (max-width: 480px) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+        }
+
+        @media (min-width: 481px) and (max-width: 531px) {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+
+        @media (min-width: 532px) and (max-width: 900px) {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
 
         .news-post {
             width: 45%;
@@ -170,6 +261,82 @@
             margin-right: 24px;
             border: 0.1px solid map-get($pry-colors, dark-red);
             border-radius: 10px;
+
+            @media (max-width: 480px) {
+                width: 75%;
+                margin-right: 0;
+                margin-bottom: 48px;
+
+
+                h3 {
+                    margin-bottom: 24px;
+                    line-height: 1.5rem;
+                }
+
+            }
+
+            @media (min-width: 481px) and (max-width: 531px) {
+                width: 35%;
+                height: 75vh;
+                margin-right: 0;
+                margin-bottom: 32px;
+
+                h3 {
+                    margin-bottom: 24px;
+                }
+
+                p {
+                    width: 105%;
+                }
+            }
+
+            @media (min-width: 532px) and (max-width: 624px) {
+                width: 30%;
+                height: 60vh;
+                margin-bottom: 32px;
+
+                h3 {
+                    margin-bottom: 16px;
+                }
+
+                p {
+                    width: 110%;
+                }
+            }
+
+            @media (min-width: 625px) and (max-width: 760px) {
+                width: 35%;
+                height: 60vh;
+                margin-bottom: 32px;
+
+                h3 {
+                    margin-bottom: 16px;
+                }
+            }
+
+            @media (min-width: 761px) and (max-width: 900px) {
+                width: 38%;
+                height: 55vh;
+                margin-bottom: 32px;
+
+                h3 {
+                    margin-bottom: 24px;
+                }
+            }
+
+            @media (min-width: 901px) and (max-width: 1100px) {
+                width: 40%;
+                height: 68vh;
+                margin-bottom: 0;
+
+                h3 {
+                    margin-bottom: 16px;
+                }
+            }
+
+            @media (min-width: 1101px) {
+                height: 50vh;
+            }
 
             .tertiarybtn {
                 margin-top: 48px;
@@ -197,9 +364,14 @@
         margin-bottom: 56px;
         width: 80%;
 
+        @media (max-width: 480px) {
+            width: 80%;
+            justify-content: space-between;
+        }
 
-
-
+        @media (min-width: 481px) and (max-width: 600px) {
+            width: 80%;
+        }
     }
 
     .practice-areas {
@@ -214,6 +386,20 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
+
+        @media (max-width: 480px) {
+            width: 45%;
+        }
+
+        @media (min-width: 481px) and (max-width: 760px) {
+            width: 48%;
+            padding-bottom: 24px;
+        }
+
+        @media (min-width: 761px) and (max-width: 900px) {
+            width: 48%;
+            height: 45vh;
+        }
 
         img {
             height: 60px;
@@ -237,6 +423,25 @@
     height: 40vh;
     margin-bottom: 400px;
 
+    @media (max-width: 480px) {
+        height: 240vh;
+        margin-bottom: 120px;
+    }
+
+    @media (min-width: 481px) and (max-width: 750px) {
+        height: 160vh;
+        margin-bottom: 120px;
+    }
+
+    @media (min-width: 751px) and (max-width: 760px) {
+        height: 160vh;
+        margin-bottom: 120px;
+    }
+
+
+
+
+
     .our-team-title {
         width: 80%;
         display: flex;
@@ -250,6 +455,14 @@
             flex-direction: row;
             justify-content: space-evenly;
             align-items: center;
+
+            @media (max-width: 480px) {
+                width: 20%;
+            }
+
+            @media (min-width: 481px) and (max-width: 900px) {
+                width: 20%;
+            }
 
             img {
                 width: 24px;
@@ -270,6 +483,18 @@
         width: 85%;
         margin-top: 56px;
 
+        @media (max-width: 480px) {
+
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        @media (min-width: 480px) and (max-width: 761px) {
+            width: 90%;
+            flex-wrap: wrap;
+        }
+
         .team-member {
             width: 35%;
             display: flex;
@@ -280,12 +505,33 @@
             border-radius: 20px;
             filter: drop-shadow(5px 5px 25px rgba(165, 28, 48, 0.07)) drop-shadow(-5px -5px 25px rgba(165, 28, 48, 0.07));
 
+            @media (max-width: 480px) {
+                width: 80%;
+                margin-bottom: 72px;
+            }
+
+            @media (min-width: 481px) and (max-width: 605px) {
+                width: 50%;
+            }
+
+            @media (min-width: 606px) and (max-width: 799px) {
+                width: 45%;
+            }
+
+            @media (min-width: 800px) and (max-width: 1000px) {
+                width: 95%;
+            }
+
 
             img {
                 width: 80%;
                 height: 40vh;
                 border-radius: 10px 10px 0 0;
                 filter: drop-shadow(5px 5px 25px rgba(165, 28, 48, 0.07)) drop-shadow(-5px -5px 25px rgba(165, 28, 48, 0.07));
+
+                @media (min-width: 481px) and (max-width: 1000px) {
+                    width: 95%;
+                }
             }
 
             .team-member-info {
@@ -296,6 +542,10 @@
                 justify-content: flex-start;
                 align-items: center;
                 border-radius: 0 0 10px 10px;
+
+                @media (min-width: 490px) and (max-width: 1000px) {
+                    width: 95%;
+                }
 
                 p {
                     margin-bottom: 8px;
@@ -320,11 +570,21 @@
     margin: 0 auto;
     margin-bottom: 120px;
 
+    @media (max-width: 480px) {
+        margin-bottom: 72px;
+    }
+
+
+
     .testimonial-section-title {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
+
+        h2 {
+            line-height: 1.8rem;
+        }
 
         .testimonial-section-navigation {
             width: 10%;
@@ -353,7 +613,18 @@
         flex-direction: row;
         justify-content: space-between;
         margin-top: 48px;
+
         width: 110%;
+
+        @media (max-width: 480px) {
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        @media (min-width: 481px) and (max-width: 900px) {
+            flex-wrap: wrap;
+        }
 
 
         .testimonial-group {
@@ -367,6 +638,23 @@
             margin-right: 24px;
             background-color: map-get($neutrals, light-red);
             border-radius: 10px;
+
+            @media (max-width: 480px) {
+                width: 80%;
+                margin-bottom: 32px;
+            }
+
+            @media (min-width: 481px) and (max-width: 699px) {
+                width: 35%;
+                margin-bottom: 32px;
+            }
+
+            @media (min-width: 700px) and (max-width: 900px) {
+                width: 40%;
+                margin-bottom: 32px;
+            }
+
+
 
             .quote {
                 width: 24px;
@@ -424,6 +712,10 @@
     justify-content: flex-start;
     width: 80%;
 
+    @media (max-width: 480px) {
+        align-items: center;
+    }
+
     h2 {
         margin-bottom: 48px;
     }
@@ -433,18 +725,49 @@
         flex-direction: row;
         justify-content: space-between;
         flex-wrap: wrap;
-        width: 100%;
+        width: 80%;
+
+        @media (max-width: 480px) {
+            width: 90%;
+            align-items: center;
+        }
+
+        @media (min-width: 481px) and (max-width: 757px) {
+            width: 90%;
+        }
+
+
 
         .customer-logo {
             border: 1px solid map-get($pry-colors, dark-red);
             border-radius: 8px;
-            margin-right: 5%;
+            margin-right: 0;
             margin-bottom: 32px;
+
+            @media (max-width: 480px) {
+                margin-right: 0;
+            }
+
+
 
             img {
                 width: 180px;
                 height: 100px;
                 border-radius: 8px;
+
+                @media (max-width: 480px) {
+
+                    width: 140px;
+                    height: 80px;
+
+                }
+
+                @media (min-width: 481px) and (max-width: 606px) {
+
+                    width: 140px;
+                    height: 80px;
+
+                }
 
             }
         }
@@ -461,12 +784,27 @@
     padding-top: 64px;
     padding-bottom: 64px;
 
+
+
     h2 {
         margin-bottom: 24px;
+
+        @media (max-width: 480px) {
+            width: 80%;
+            text-align: center;
+            line-height: 1.8rem;
+        }
     }
 
     p {
         margin-bottom: 32px;
+
+        @media (max-width: 480px) {
+            width: 100%;
+            text-align: center;
+        }
+
+
 
     }
 
@@ -477,5 +815,14 @@
     .last-p {
         width: 30%;
         text-align: center;
+
+        @media (max-width: 480px) {
+            width: 50%;
+        }
+
+        @media (min-width: 481px) and (max-width: 739px) {
+            width: 55%;
+            text-align: center;
+        }
     }
 }
