--- a/styles/styles.css
+++ b/styles/styles.css
@@ -362,7 +362,7 @@ footer p {
 
 .news-section .news-post {
   width: 45%;
-  height: 20vh;
+  height: 120%;
   background-color: rgba(166, 28, 49, 0.07);
   padding: 32px 8px 0px 32px;
   margin-right: 24px;
