--- a/styles/styles.css
+++ b/styles/styles.css
@@ -368,6 +368,12 @@ footer p {
   margin-right: 24px;
   border: 0.1px solid #a61c31;
   border-radius: 10px;
+
+}
+
+.news-post .tertiarybtn {
+  margin-top: 48px;
+  margin-bottom: 32px;
 }
 
 
