--- a/styles/styles.css
+++ b/styles/styles.css
@@ -365,14 +365,14 @@ footer p {
 
 
 .news-section .news-post {
-  width: 45%;
+  width: 30%;
   height: 120%;
   background-color: rgba(166, 28, 49, 0.07);
   padding: 32px 8px 0px 32px;
   margin-right: 24px;
   border: 0.1px solid #a61c31;
   border-radius: 10px;
-
+  margin-bottom: 24px;
 }
 
 .news-section .news-post h3 {
@@ -1803,12 +1803,13 @@ footer p {
   }
 
   .news-section .news-post {
-    width: 80%;
+    width: 45%;
     height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    margin-bottom: 32px;
   }
 
   .news-post h3 {
