--- a/styles/styles.css
+++ b/styles/styles.css
@@ -531,7 +531,7 @@ footer p {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  margin: 0 auto;
+  margin: 64px auto;
   margin-bottom: 120px;
 }
 
